* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 0.7.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Michael Riddle <mike@sicura.us> - 0.6.0
- Add RockyLinux 8 support

* Wed Jan 18 2023 Michael Riddle <mike@sicura.us> - 0.5.3
- Added support for RHEL 9

* Sat Oct 15 2022 Trevor Vaughan <trevor@sicura.us> - 0.5.2
- Remove unnecessary augeasproviders_core module dependency

* Sun Mar 20 2022 Trevor Vaughan <trevor@sicura.us> - 0.5.1
- Support Amazon Linux 2

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jan 21 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.5
- Fixed:
  - Now use the simplib__crypto_policy_state fact instead of
    crypto_policy__state due to module dependency issues.

* Wed Dec 23 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.4
- Fixed:
  - Ensure that dracut_rebuild is called when the fips kernel parameter is
    changed
  - Try to call fips-mode-setup (EL8+) before falling back to the raw dracut
    command
  - Fixed the acceptance test fact checks
- Changed:
  - Added Puppet 7 support

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.4
- Removed EL6 support

* Wed Sep 30 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.3-0
- Fix: Update the beaker nodesets to embed the SSH crypto configuration.
   - This prevents issues when the underlying user's SSH settings would not
     otherwise allow FIPS-compatible algorithms for older systems.

* Wed Sep 16 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.2-0
- Advertise OEL8 support in the metadata.json.

* Wed May 13 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.1-0
- Ensure that EL8 updates trigger updating the global system crypto policy since
  some subsystems now ignore the local configuration by default.

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.0-0
- Add EL8 support
- Add REFERENCE.md
